# interview-greenole

./: pyproject.toml
questions/: question1_use_cases.feature  question2_perfomance_test.feature  question3_regression_test.feature  question4_security_test.feature  question5_automation_test.feature  question6_usability_test.feature  question7_report_bugs.feature  question8_unit_test.py  question9_delivery_quality.feature
