[tool.poetry]
name = "interview-greenole"
version = "0.1.0"
description = ""
authors = ["Fernando Junior <fernandofg.junior@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
